tests/build/cases/impl_ui_node/incorrect_assign_token.stderr
error: expected `delegate = <expr>`
 --> $DIR/incorrect_assign_token.rs:5:5
  |
5 |     delegate: &self.0,
  |     ^^^^^^^^

warning: unused import: `UiNode`
 --> $DIR/incorrect_assign_token.rs:1:46
  |
1 | use zero_ui::core::{impl_ui_node, NilUiNode, UiNode};
  |                                              ^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
